--- a/index.html
+++ b/index.html
@@ -31,17 +31,57 @@
                     <a class="btn" href="#" >Consulta el Clima</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="btn" href="#">Nuestros servicios</a>
+                    <a class="btn" href="servicios.html">Nuestros servicios</a>
                 </li>
                 <li class="nav-item active">
                     <a class="btn" href="#">Contáctanos</a>
                 </li>
             </ul>
         </div>
-
-        <div class="container">
-            
-        </div>
     </nav>
+    <!--Cards-->
+    <div class="container" style="margin-top: 50px;">
+       <div class="row">
+            <div class="col">
+                <div class="container">
+                    <div class="card" style="width: 90%;">
+                        <img src="Roberto Manfinfla.jpg" class="card-img-top" style="height: 350px;">
+                        <div class="card-body">
+                          <h5 class="card-title">Axel Rubio A.K.A El Xokas</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="container">
+                    <div class="card" style="width: 90%;">
+                        <img src="nerd-emoji.gif" class="card-img-top" style="height: 350px;">
+                        <div class="card-body">
+                          <h5 class="card-title">Rodrigo Huaiquil</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="container">
+                    <div class="card" style="width: 90%;">
+                        <img src="elmo.jfif" class="card-img-top" style="height: 350px;">
+                        <div class="card-body">
+                          <h5 class="card-title">Máximo Ortega</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+       </div>
+       
+    </div>
 </body>
 </html>
