--- a/contactanos.html
+++ b/contactanos.html
@@ -10,10 +10,7 @@
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
@@ -54,63 +51,102 @@
     </nav>
     
     <!-- Contactanos -->
-    <div class="container">
-        <form id="formulario">
-            <label>Nombre:</label><br />
-            <input type="text" id="itNombre" class="campo"/><br />
-            <div id="mensaje1" class="errores">Escribe tu nombre</div>
+<div class="container">
+    <form id="formulario">
+        <label>Nombre:</label><br />
+        <input type="text" id="itNombre" class="campo"/><br />
+        <div id="mensaje1" class="errores">Por favor, escribe tu nombre</div>
 
-            <label>Celular:</label><br />
-            <input type="text" id="itCelular" class="campo"/><br />
-            <div id="mensaje2" class="errores">Escribe tu nombre</div>
+        <label>Celular:</label><br />
+        <input type="text" id="itCelular" class="campo"/><br />
+        <div id="mensaje2" class="errores">Por favor, ingresa tu número de celular</div>
 
-            <label>Email:</label><br />
-            <input type="text" id="itEmail" class="campo"/><br />
-            <div id="mensaje3" class="errores">Escribe tu nombre</div>
+        <label>Email:</label><br />
+        <input type="text" id="itEmail" class="campo"/><br />
+        <div id="mensaje3" class="errores">Por favor, ingresa un correo electrónico válido</div>
 
-            <label>País:</label><br />
-            <input type="text" id="itPais" class="campo"/><br />
-            <div id="mensaje4" class="errores">Escribe tu nombre</div>
+        <label>País:</label><br />
+        <input type="text" id="itPais" class="campo"/><br />
+        <div id="mensaje4" class="errores">Por favor, ingresa tu país</div>
 
-            <label>Ciudad:</label><br />
-            <input type="text" id="itCiudad" class="campo"/><br />
-            <div id="mensaje5" class="errores">Escribe tu nombre</div>
+        <label>Ciudad:</label><br />
+        <input type="text" id="itCiudad" class="campo"/><br />
+        <div id="mensaje5" class="errores">Por favor, ingresa tu ciudad</div>
 
-            <label>Consulta:</label><br />
-            <textarea name="consulta" id="itConsulta" cols="30" rows="10"></textarea><br />
-            <div id="mensaje6" class="errores">Escribe el motivo de la consulta</div>
+        <label>Consulta:</label><br />
+        <textarea name="consulta" id="itConsulta" cols="30" rows="10"></textarea><br />
+        <div id="mensaje6" class="errores">Por favor, escribe el motivo de tu consulta</div>
 
-            <input type="submit" id="bEnviar" value="Enviar datos" class="button"/>
-        </form>
-    </div>
+        <input type="submit" id="bEnviar" value="Enviar datos" class="button"/>
+    </form>
+</div>
 
-    <script>
-        var expr = /^[a-zA-Z0-9_\.\-]+@[a-zA-Z0-9\-]+\.[a-zA-Z0-9\-\.]+$/;
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function(){
+        // Ocultar los mensajes de error al cargar la página
+        $(".errores").hide();
 
-        $(document).ready(function(){
-            $("bEnviar").click(function(){
-                var nombre = $("itNombre").val();
-                var celular = $("itCeluar").val();
-                var email = $("itEmail").val();
-                var pais = $("itPais").val();
-                var ciudad = $("itCiudad").val();
-                var consulta = $("itConsulta").val();
+        $("#formulario").submit(function(event){
+            var nombre = $("#itNombre").val();
+            var celular = $("#itCelular").val();
+            var correo = $("#itEmail").val();
+            var pais = $("#itPais").val();
+            var ciudad = $("#itCiudad").val();
+            var consulta = $("#itConsulta").val();
+            var valido = true;
 
-                if( nombre == ""){
-                    $("mensaje1").fadeIn();
-                    return false;
-                }else{
-                    $("mensaje1").fadeOut();
-                    if(correo == "" || !expr.test(correo)){
-                        $("#mensaje2").fadeIn();
-                        return false;
-                    }
-                }
+            // Verificar si los campos están vacíos y mostrar mensajes de error
+            if(nombre == "") {
+                $("#mensaje1").text("Por favor, escribe tu nombre").show();
+                valido = false;
+            } else {
+                $("#mensaje1").hide();
+            }
 
+            if(celular == "") {
+                $("#mensaje2").text("Por favor, ingresa tu número de celular").show();
+                valido = false;
+            } else {
+                $("#mensaje2").hide();
+            }
 
-            });
+            if(correo == "") {
+                $("#mensaje3").text("Por favor, ingresa un correo electrónico válido").show();
+                valido = false;
+            } else {
+                $("#mensaje3").hide();
+            }
+
+            if(pais == "") {
+                $("#mensaje4").text("Por favor, ingresa tu país").show();
+                valido = false;
+            } else {
+                $("#mensaje4").hide();
+            }
+
+            if(ciudad == "") {
+                $("#mensaje5").text("Por favor, ingresa tu ciudad").show();
+                valido = false;
+            } else {
+                $("#mensaje5").hide();
+            }
+
+            if(consulta == "") {
+                $("#mensaje6").text("Por favor, escribe el motivo de tu consulta").show();
+                valido = false;
+            } else {
+                $("#mensaje6").hide();
+            }
+
+            // Si algún campo está vacío, detener el envío del formulario
+            if(!valido) {
+                event.preventDefault();
+            }
         });
-    </script>
+    });
+</script>
+
 
 </body>
 
