--- a/mirador.html
+++ b/mirador.html
@@ -9,6 +9,35 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+
+    <!--NAVBAR-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand">Turismo Extremo Sur</a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="btn" href="index.html">Inicio <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="btn" href="clima.html">Consulta el Clima</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="btn" href="servicios.html">Nuestros servicios</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="btn" href="contactanos.html">Contáctanos</a>
+                </li>
+            </ul>
+        </div>
+    </nav>    
+
     <div style="text-align: right; margin-top: 20px; margin-right: 20px;">
         <a href="servicios.html"><button type="button" class="btn btn-primary">Volver</button></a>
     </div>
