--- a/contactanos.html
+++ b/contactanos.html
@@ -38,7 +38,7 @@
                     <a class="btn" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="btn" href="#">Consulta el Clima</a>
+                    <a class="btn" href="clima.html">Consulta el Clima</a>
                 </li>
                 <li class="nav-item active">
                     <a class="btn" href="servicios.html">Nuestros servicios</a>
