--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
@@ -21,6 +19,7 @@
 
 <body>
     <!--NAVBAR-->
+    <div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand">Turismo Extremo Sur</a>
 
@@ -36,7 +35,7 @@
                     <a class="btn" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="btn" href="#">Consulta el Clima</a>
+                    <a class="btn" href="clima.html">Consulta el Clima</a>
                 </li>
                 <li class="nav-item active">
                     <a class="btn" href="servicios.html">Nuestros servicios</a>
@@ -47,7 +46,7 @@
             </ul>
         </div>
     </nav>
-
+    </div>
     <!--Cards-->
     <div class="container" style="margin-top: 50px;">
         <div class="row">
