--- a/mirador.html
+++ b/mirador.html
@@ -47,71 +47,20 @@
     <div class="container" style="text-align: center; margin-top: 50px;">
         <div class="row">
             <div class="col">
-                <img src="caminata2.jpg" alt="" style="height: 500px;" width="500px">
+                <img src="caminata2.jpg" alt="" style="max-width: 100%; height: auto;">
             </div>
         </div>
         <br>
         <div class="row">
             <div class="col">
-                <p>bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla </p>
+                <p style="text-align: center;">bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla </p>
             </div>
         </div>
     </div>
-
-<script>
-                /**
-             * @license
-             * Copyright 2019 Google LLC. All Rights Reserved.
-             * SPDX-License-Identifier: Apache-2.0
-             */
-            let map;
-            const chicago = { lat: 41.85, lng: -87.65 };
-
-            /**
-             * Creates a control that recenters the map on Chicago.
-             */
-            function createCenterControl(map) {
-            const controlButton = document.createElement("button");
-
-            // Set CSS for the control.
-            controlButton.classList.add('buttonStyle');
-
-            controlButton.textContent = "Center Map";
-            controlButton.title = "Click to recenter the map";
-            controlButton.type = "button";
-            // Setup the click event listeners: simply set the map to Chicago.
-            controlButton.addEventListener("click", () => {
-                map.setCenter(chicago);
-            });
-            return controlButton;
-            }
-
-            function initMap() {
-            map = new google.maps.Map(document.getElementById("map"), {
-                zoom: 4,
-                center: { lat: 49.496675, lng: -102.65625 },
-            });
-
-            var georssLayer = new google.maps.KmlLayer({
-                url: "http://api.flickr.com/services/feeds/geo/?g=322338@N20&lang=en-us&format=feed-georss",
-            });
-            georssLayer.setMap(map);
-
-            // Create the DIV to hold the control.
-            const centerControlDiv = document.createElement("div");
-            // Create the control.
-            const centerControl = createCenterControl(map);
-
-            // Append the control to the DIV.
-            centerControlDiv.appendChild(centerControl);
-            map.controls[google.maps.ControlPosition.TOP_CENTER].push(
-                centerControlDiv
-            );
-            }
-
-            window.initMap = initMap;
-</script>
-<div id="map" style="height: 400px; margin-left: 200px; margin-right: 200px;"></div><br>
-
+    <div class="container">
+        <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3575.4088700641432!2d-64.82702830501077!3d18.300981981164778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2scl!4v1715351129287!5m2!1ses-419!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div><br><br><br>
 </body>
 </html>
