--- a/monte tarn.html
+++ b/monte tarn.html
@@ -57,61 +57,12 @@
             </div>
         </div>
     </div>
-
-<script>
-                /**
-             * @license
-             * Copyright 2019 Google LLC. All Rights Reserved.
-             * SPDX-License-Identifier: Apache-2.0
-             */
-            let map;
-            const chicago = { lat: 41.85, lng: -87.65 };
-
-            /**
-             * Creates a control that recenters the map on Chicago.
-             */
-            function createCenterControl(map) {
-            const controlButton = document.createElement("button");
-
-            // Set CSS for the control.
-            controlButton.classList.add('buttonStyle');
-
-            controlButton.textContent = "Center Map";
-            controlButton.title = "Click to recenter the map";
-            controlButton.type = "button";
-            // Setup the click event listeners: simply set the map to Chicago.
-            controlButton.addEventListener("click", () => {
-                map.setCenter(chicago);
-            });
-            return controlButton;
-            }
-
-            function initMap() {
-            map = new google.maps.Map(document.getElementById("map"), {
-                zoom: 4,
-                center: { lat: 49.496675, lng: -102.65625 },
-            });
-
-            var georssLayer = new google.maps.KmlLayer({
-                url: "http://api.flickr.com/services/feeds/geo/?g=322338@N20&lang=en-us&format=feed-georss",
-            });
-            georssLayer.setMap(map);
-
-            // Create the DIV to hold the control.
-            const centerControlDiv = document.createElement("div");
-            // Create the control.
-            const centerControl = createCenterControl(map);
-
-            // Append the control to the DIV.
-            centerControlDiv.appendChild(centerControl);
-            map.controls[google.maps.ControlPosition.TOP_CENTER].push(
-                centerControlDiv
-            );
-            }
-
-            window.initMap = initMap;
-</script>
-<div id="map" style="height: 400px; margin-left: 200px; margin-right: 200px;"></div><br>
-
+    <div class="container">
+      <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d202560.31234884873!2d-157.36819509475288!3d1.8863713155612247!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2scl!4v1715352160956!5m2!1ses-419!2scl" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+  </div><br><br><br>
+  
+    
 </body>
 </html>
