--- a/servicios.html
+++ b/servicios.html
@@ -13,6 +13,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
+        <style>
+          .custom-img {
+              max-width: 100%;
+              height: auto;
+          }
+      </style>
 
 </head>
 <body>
@@ -41,24 +47,25 @@
       </div>
   </nav> <!--Fin del NavBar-->
 
-    <div class="container" style="margin-top: 50px;">
-        <div class="row">
-          <div class="col-md-4">
-            <img src="montana.webp" alt="Imagen 1" class="img-fluid" style="height: 250px; width: 450px;">
+  <div class="container" style="margin-top: 50px;">
+    <div class="row">
+        <div class="col-md-4">
+            <img src="montana.webp" alt="Imagen 1" class="img-fluid custom-img">
             <h2>caminata al Monte Tarn</h2>
             <div style="text-align: center;"><a href="monte tarn.html"><button type="button" class="btn btn-primary">Ver</button></a></div>
-          </div>
-          <div class="col-md-4">
-            <img src="camino.webp" alt="Imagen 2" class="img-fluid" style="height: 250px; width: 450px;">
+        </div>
+        <div class="col-md-4">
+            <img src="camino.webp" alt="Imagen 2" class="img-fluid custom-img">
             <h2>caminata a Parrillar</h2>
             <div style="text-align: center;"><a href="parrillar.html"><button type="button" class="btn btn-primary">Ver</button></a></div>
-          </div>
-          <div class="col-md-4">
-            <img src="caminata2.jpg" alt="Imagen 3" class="img-fluid" style="height: 250px; width: 450px;">
+        </div>
+        <div class="col-md-4">
+            <img src="caminata2.jpg" alt="Imagen 3" class="img-fluid custom-img">
             <h2>caminata a Mirador Zapador Austral</h2>
             <div style="text-align: center;"><a href="mirador.html"><button type="button" class="btn btn-primary">Ver</button></a></div>
-          </div>
         </div>
-      </div>
+    </div>
+</div>
+
 </body>
 </html>
