--- a/contactanos.html
+++ b/contactanos.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/servicio.css">
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
@@ -44,7 +45,7 @@
     </nav> <!--Fin del NavBar-->
     
     <!-- Contactanos -->
-<div class="container">
+<div class="container" style="margin-top: 70px;">
     <form id="formulario">
         <label>Nombre:</label><br />
         <input type="text" id="itNombre" class="campo"/><br />
@@ -75,6 +76,7 @@
 </div>
 
 <script>
+    
     $(document).ready(function(){
         // Ocultar los mensajes de error al cargar la página
         $(".errores").hide();
