--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <h5 class="card-title">Axel Rubio A.K.A El Xokas</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                             <h5 class="card-title">Rodrigo Huaiquil</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                             <h5 class="card-title">Máximo Ortega</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
