--- a/servicios.html
+++ b/servicios.html
@@ -8,17 +8,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/servicio.css">
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
-        <style>
-          .custom-img {
-              max-width: 100%;
-              height: auto;
-          }
-      </style>
+
 
 </head>
 <body>
@@ -47,25 +43,41 @@
       </div>
   </nav> <!--Fin del NavBar-->
 
-  <div class="container" style="margin-top: 50px;">
-    <div class="row">
-        <div class="col-md-4">
-            <img src="montana.webp" alt="Imagen 1" class="img-fluid custom-img">
-            <h2>caminata al Monte Tarn</h2>
-            <div style="text-align: center;"><a href="monte tarn.html"><button type="button" class="btn btn-primary">Ver</button></a></div>
+    <div class="container" style="margin-top: 50px;">
+        <div class="row">
+            <div class="col-md-4">
+              <div class="card">
+                <img src="montana.webp" class="card-img-top" style="height: 100%; width: 100%;" alt="Imagen 1">
+                <div class="card-body">
+                  <h5 class="card-title">Caminata al Monte Tarn</h5>
+                  <p class="card-text">Descripción breve de la caminata al Monte Tarn.</p>
+                  <a href="monte tarn.html" class="btn btn-primary">Ver más</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card">
+                <img src="camino.webp" class="card-img-top" style="height: 100%; width: 100%;" alt="Imagen 2">
+                <div class="card-body">
+                  <h5 class="card-title">Caminata a Parrillar</h5>
+                  <p class="card-text">Descripción breve de la caminata a Parrillar.</p>
+                  <a href="parrillar.html" class="btn btn-primary">Ver más</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card">
+                <img src="caminata2.jpg" class="card-img-top" style="height: 100%; width: 100%;" alt="Imagen 3">
+                <div class="card-body">
+                  <h5 class="card-title">Caminata a Mirador Zapador Austral</h5>
+                  <p class="card-text">Descripción breve de la caminata al Mirador Zapador Austral.</p>
+                  <a href="mirador.html" class="btn btn-primary">Ver más</a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-4">
-            <img src="camino.webp" alt="Imagen 2" class="img-fluid custom-img">
-            <h2>caminata a Parrillar</h2>
-            <div style="text-align: center;"><a href="parrillar.html"><button type="button" class="btn btn-primary">Ver</button></a></div>
-        </div>
-        <div class="col-md-4">
-            <img src="caminata2.jpg" alt="Imagen 3" class="img-fluid custom-img">
-            <h2>caminata a Mirador Zapador Austral</h2>
-            <div style="text-align: center;"><a href="mirador.html"><button type="button" class="btn btn-primary">Ver</button></a></div>
-        </div>
-    </div>
-</div>
-
+      </div>
+  
 </body>
 </html>
