--- a/clima.html
+++ b/clima.html
@@ -73,5 +73,6 @@ $.ajax(settings).done(function (response) {
 });
   
      </script>
+<div id="ww_36b831ebe76a4" v='1.3' loc='id' a='{"t":"responsive","lang":"es","sl_lpl":1,"ids":["wl10194"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>Más previsiones: <a href="https://oneweather.org/santiago/30_days/" id="ww_36b831ebe76a4_u" target="_blank">30 day weather forecast Santiago de Chile</a></div><script async src="https://app2.weatherwidget.org/js/?id=ww_36b831ebe76a4"></script>
 </body>
 </html>
